--- a/index.html
+++ b/index.html
@@ -1,75 +1,81 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-58917162-3"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag("js", new Date());
 
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
-	<title>repl.it</title>
+            gtag("config", "UA-58917162-3");
+        </script>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width" />
+        <title>Visa Bulletin - Trends</title>
 
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-	 crossorigin="anonymous">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
 
-    <link href="css/bootstrap-datepicker.css" rel="stylesheet" type="text/css" />
+        <link href="css/bootstrap-datepicker.css" rel="stylesheet" type="text/css" />
 
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
+        <link href="css/style.css" rel="stylesheet" type="text/css" />
 
-	<script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous">
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
-	</script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-	 crossorigin="anonymous">
+        <script src="js/moment.min.js"></script>
 
-	</script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-	 crossorigin="anonymous">
+        <script src="js/bootstrap-datepicker.js"></script>
+    </head>
 
-	</script>
-
-	<script src="js/moment.min.js">
-	</script>
-    
-    <script src="js/bootstrap-datepicker.js">
-	</script>
-
-</head>
-
-<body>
-
-    <h1 style="text-align:center">Visa Bulletin - Trends</h1>
-    <br><br>
-    <table class="table" style="margin-left:auto;margin-right:auto;width:50%">
-        <tr><th style="text-align:left">From</th><th style="text-align:right">To</th></tr>
-    </table>
-    <div class="container" style="width:50%">
-        <div class="input-group input-daterange">
-            <input type="text" class="form-control" id="datepickerfrom">
-            <div class="input-group-addon"></div>
-            <input type="text" class="form-control" id="datepickerto">
+    <body>
+        <h1 style="text-align: center;">Visa Bulletin - Trends</h1>
+        <br />
+        <br />
+        <table class="table" style="margin-left: auto; margin-right: auto; width: 50%;">
+            <tr>
+                <th style="text-align: left;">From</th>
+                <th style="text-align: right;">To</th>
+            </tr>
+        </table>
+        <div class="container" style="width: 50%;">
+            <div class="input-group input-daterange">
+                <input type="text" class="form-control" id="datepickerfrom" />
+                <div class="input-group-addon"></div>
+                <input type="text" class="form-control" id="datepickerto" />
+            </div>
         </div>
-    </div>
-    <br><br>
+        <br />
+        <br />
 
-    <h2 style="text-align:center">Family-Action</h2>
-<div style="overflow-x:auto;">
-	<table class="table" id="table1" style="margin-left:auto;margin-right:auto;width:80%"></table>
-  </div> 
-  <br><br>
-  <h2 style="text-align:center">Family-Final</h2>
-<div style="overflow-x:auto;">
-	<table class="table" id="table2" style="margin-left:auto;margin-right:auto;width:80%"></table>
-    </div><br><br>
-    <h2 style="text-align:center">Employment-Action</h2>
-<div style="overflow-x:auto;">
-    <table class="table" id="table3" style="margin-left:auto;margin-right:auto;width:80%"></table>
-   </div> <br><br>
-   <h2 style="text-align:center">Employment-Final</h2>
-<div style="overflow-x:auto;">
-    <table class="table" id="table4" style="margin-left:auto;margin-right:auto;width:80%"></table>
-  </div>  <br><br>
+        <h2 style="text-align: center;">Family-Action</h2>
+        <div style="overflow-x: auto;">
+            <table class="table" id="table1" style="margin-left: auto; margin-right: auto; width: 80%;"></table>
+        </div>
+        <br />
+        <br />
+        <h2 style="text-align: center;">Family-Final</h2>
+        <div style="overflow-x: auto;">
+            <table class="table" id="table2" style="margin-left: auto; margin-right: auto; width: 80%;"></table>
+        </div>
+        <br />
+        <br />
+        <h2 style="text-align: center;">Employment-Action</h2>
+        <div style="overflow-x: auto;">
+            <table class="table" id="table3" style="margin-left: auto; margin-right: auto; width: 80%;"></table>
+        </div>
+        <br />
+        <br />
+        <h2 style="text-align: center;">Employment-Final</h2>
+        <div style="overflow-x: auto;">
+            <table class="table" id="table4" style="margin-left: auto; margin-right: auto; width: 80%;"></table>
+        </div>
+        <br />
+        <br />
 
-    <script src="js/script.js">
-	</script>
-    
-</body>
-
+        <script src="js/script.js"></script>
+    </body>
 </html>
