--- a/index.html
+++ b/index.html
@@ -51,25 +51,25 @@
         <br />
         <br />
 
-        <h2 style="text-align: center;">Family-Action</h2>
+        <h2 style="text-align: center;">Family-Sponsored: Final Action Dates</h2>
         <div style="overflow-x: auto;">
             <table class="table" id="table1" style="margin-left: auto; margin-right: auto; width: 80%;"></table>
         </div>
         <br />
         <br />
-        <h2 style="text-align: center;">Family-Final</h2>
+        <h2 style="text-align: center;">Family-Sponsored: Filing Dates</h2>
         <div style="overflow-x: auto;">
             <table class="table" id="table2" style="margin-left: auto; margin-right: auto; width: 80%;"></table>
         </div>
         <br />
         <br />
-        <h2 style="text-align: center;">Employment-Action</h2>
+        <h2 style="text-align: center;">Employment-Based: Final Action Dates</h2>
         <div style="overflow-x: auto;">
             <table class="table" id="table3" style="margin-left: auto; margin-right: auto; width: 80%;"></table>
         </div>
         <br />
         <br />
-        <h2 style="text-align: center;">Employment-Final</h2>
+        <h2 style="text-align: center;">Employment-Based: Filing Dates</h2>
         <div style="overflow-x: auto;">
             <table class="table" id="table4" style="margin-left: auto; margin-right: auto; width: 80%;"></table>
         </div>
