--- a/index.html
+++ b/index.html
@@ -14,46 +14,45 @@
         </script>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" />
-        <meta name="description" content="Interactive way to find the number of days by which the Final Action and Filing Dates have regressed or moved forward.">
+        <meta name="description" content="Interactive way to find the number of days by which the Final Action and Filing Dates have regressed or moved forward." />
 
         <title>Visa Bulletin - Trends</title>
 
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
-
-        <link href="css/bootstrap-datepicker.css" rel="stylesheet" type="text/css" />
+        <link href="css/bootstrap.4.5.0.min.css" rel="stylesheet" crossorigin="anonymous" />
+        <link href="css/bootstrap-datepicker.1.19.0.min.css" rel="stylesheet" type="text/css" />
 
         <link href="css/style.css" rel="stylesheet" type="text/css" />
 
-        <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-
-        <script src="js/moment.min.js"></script>
-
-        <script src="js/bootstrap-datepicker.js"></script>
+        <script src="js/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
+        <script src="js/popper.1.16.0.min.js" crossorigin="anonymous"></script>
+        <script src="js/bootstrap.4.5.0.min.js" crossorigin="anonymous"></script>
+        <script src="js/bootstrap-datepicker.1.9.0.min.js"></script>
+        <script src="js/moment.2.27.0.min.js"></script>
     </head>
 
     <body>
-        <h1 style="text-align: center;">Visa Bulletin - Trends</h1>
-        <p style="text-align:center;color:gray;">Interactive way to find the number of days by which the Final Action and Filing Dates have regressed or moved forward.</p>
+        <h1 style="text-align:center;">Visa Bulletin - Trends</h1>
+        <div style="width:80%;margin:0 auto;text-align:center;">
+            <span style="color:gray;">Interactive way to find the number of days by which the Final Action and Filing Dates have regressed or moved forward.</span>
+        </div>
         <br />
         <br />
-        <p style="text-align:center;">Just select the months you want to compare</p>
+        <p style="text-align: center;">Just select the months you want to compare</p>
         <table class="table" style="margin-left: auto; margin-right: auto; width: 60%;">
             <tr>
                 <th style="text-align: left;">From</th>
                 <th style="text-align: right;">To</th>
             </tr>
         </table>
-        <div class="container" style="width: 60%;text-align: center;">
+        <div class="container" style="width: 60%; text-align: center;">
             <div class="input-group input-daterange">
                 <input type="text" class="form-control" id="datepickerfrom" />
                 <div class="input-group-addon"></div>
                 <input type="text" class="form-control" id="datepickerto" />
             </div>
-            <span style="color: #FF0000">RED</span> denotes days regressed.
+            <span style="color: #ff0000;">RED</span> denotes days regressed.
             <br />
-            <span style="color: #009933">GREEN</span> denotes days moved forward.
+            <span style="color: #009933;">GREEN</span> denotes days moved forward.
         </div>
         <br />
         <br />
