--- a/index.html
+++ b/index.html
@@ -1,85 +1,159 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-58917162-3"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag() {
-                dataLayer.push(arguments);
-            }
+
+<head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-58917162-3"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+            function gtag() {dataLayer.push(arguments);}
             gtag("js", new Date());
-
             gtag("config", "UA-58917162-3");
-        </script>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width" />
-        <meta name="description" content="Interactive way to find the number of days by which the Final Action and Filing Dates have regressed or moved forward." />
+	</script>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width" />
+	<meta name="description" content="Interactive way to find the number of days by which the Final Action and Filing Dates have regressed or moved forward." />
 
-        <title>Visa Bulletin - Trends</title>
+	<title>Visa Bulletin</title>
 
-        <link href="css/bootstrap.4.5.0.min.css" rel="stylesheet" crossorigin="anonymous" />
-        <link href="css/bootstrap-datepicker.1.19.0.min.css" rel="stylesheet" type="text/css" />
-        <link href="css/style.css" rel="stylesheet" type="text/css" />
+	<link href="css/bootstrap.4.5.0.min.css" rel="stylesheet" crossorigin="anonymous" />
+	<link href="css/bootstrap-datepicker.1.19.0.min.css" rel="stylesheet" type="text/css" />
+	<link href="css/style.css" rel="stylesheet" type="text/css" />
 
-        <script src="js/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
-        <script src="js/popper.1.16.0.min.js" crossorigin="anonymous"></script>
-        <script src="js/bootstrap.4.5.0.min.js" crossorigin="anonymous"></script>
-        <script src="js/bootstrap-datepicker.1.9.0.min.js"></script>
-        <script src="js/moment.2.27.0.min.js"></script>
-    </head>
+	<script src="js/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
+	<script src="js/popper.1.16.0.min.js" crossorigin="anonymous"></script>
+	<script src="js/bootstrap.4.5.0.min.js" crossorigin="anonymous"></script>
+	<script src="js/bootstrap-datepicker.1.9.0.min.js"></script>
+	<script src="js/moment.2.27.0.min.js"></script>
+</head>
 
-    <body>
-        <h1 style="text-align:center;">Visa Bulletin - Trends</h1>
-        <div style="width:80%;margin:0 auto;text-align:center;">
-            <span style="color:gray;">Interactive way to find the number of days by which the Final Action and Filing Dates have regressed or moved forward.</span>
+<body>
+	<nav class="navbar navbar-default navbar-expand-md bg-faded justify-content-center">
+		<img class="mr-auto" src="images/brand.png" height="48px"/>
+        <h1 class="mx-auto" style="margin:0;" onclick="window.location.href='index.html';">Visa Bulletin</h1>
+        <img class="ml-auto" src="images/info.png" height="48px" data-toggle="modal" data-target="#infoModal"/>
+    </nav>
+
+    <br/>
+    <!-- <h1 style="text-align:center;">Visa Bulletin - Trends</h1> -->
+    <div style="width:80%;margin:0 auto;text-align:center;">
+        <span style="color:gray;">Interactive way to find the number of days by which the Final Action and Filing Dates have regressed or moved forward.</span>
+    </div>
+    <br />
+    <br />
+    <p style="text-align: center;">Just select the months you want to compare</p>
+    <table class="table" style="margin-left: auto; margin-right: auto; width: 60%;">
+        <tr>
+            <th style="text-align: left;">From</th>
+            <th style="text-align: right;">To</th>
+        </tr>
+    </table>
+    <div class="container" style="width: 60%; text-align: center; margin-bottom: 30px;">
+        <div class="input-group input-daterange">
+            <input type="text" class="form-control" id="datepickerfrom" />
+            <div class="input-group-addon"></div>
+            <input type="text" class="form-control" id="datepickerto" />
         </div>
+        <span style="color: Red;">RED</span> denotes days regressed.
         <br />
-        <br />
-        <p style="text-align: center;">Just select the months you want to compare</p>
-        <table class="table" style="margin-left: auto; margin-right: auto; width: 60%;">
-            <tr>
-                <th style="text-align: left;">From</th>
-                <th style="text-align: right;">To</th>
-            </tr>
-        </table>
-        <div class="container" style="width: 60%; text-align: center;">
-            <div class="input-group input-daterange">
-                <input type="text" class="form-control" id="datepickerfrom" />
-                <div class="input-group-addon"></div>
-                <input type="text" class="form-control" id="datepickerto" />
+        <span style="color: MediumSeaGreen;">GREEN</span> denotes days moved forward.
+    </div>
+    <br />
+    <br />
+    <h2 style="text-align: center;">Date Tables</h2>
+    <div class="container" style="width:80%; margin-bottom: 30px;">
+        <div class="row" style="text-align:center;">
+            <div class="col-md-5 txtonroundedborder">
+                <h1><span>Family-Sponsored</span></h1>
+                <div class="row">
+                    <div class="col-md-6">
+                        <button type="button" class="btn btn-light all-buttons" onclick="window.location.href='index.html#table1head';">Final Action Dates</button>
+                    </div>
+                    <div class="col-md-6">
+                        <button type="button" class="btn btn-light all-buttons" onclick="window.location.href='index.html#table2head';">Filing Dates</button>
+                    </div>
+                </div>
             </div>
+            <div class="col-md-5 offset-md-2 txtonroundedborder">
+                <h1><span>Employment-Based</span></h1>
+                <div class="row">
+                    <div class="col-md-6">
+                        <button type="button" class="btn btn-light all-buttons" onclick="window.location.href='index.html#table3head';">Final Action Dates</button>
+                    </div>
+                    <div class="col-md-6">
+                        <button type="button" class="btn btn-light all-buttons" onclick="window.location.href='index.html#table4head';">Filing Dates</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <br />
+    <br />
+    <h2 id="table1head" style="text-align: center;">Family-Sponsored: Final Action Dates</h2>
+    <div style="overflow-x: auto;">
+        <table class="table" id="table1" style="margin-left: auto; margin-right: auto; width: 80%;"></table>
+    </div>
+    <br />
+    <br />
+    <h2 id="table2head" style="text-align: center;">Family-Sponsored: Filing Dates</h2>
+    <div style="overflow-x: auto;">
+        <table class="table" id="table2" style="margin-left: auto; margin-right: auto; width: 80%;"></table>
+    </div>
+    <br />
+    <br />
+    <h2 id="table3head" style="text-align: center;">Employment-Based: Final Action Dates</h2>
+    <div style="overflow-x: auto;">
+        <table class="table" id="table3" style="margin-left: auto; margin-right: auto; width: 80%;"></table>
+    </div>
+    <br />
+    <br />
+    <h2 id="table4head" style="text-align: center;">Employment-Based: Filing Dates</h2>
+    <div style="overflow-x: auto;">
+        <table class="table" id="table4" style="margin-left: auto; margin-right: auto; width: 80%;"></table>
+    </div>
+    <br />
+    <br />
+
+    <!-- Modal -->
+    <div class="modal fade" id="infoModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+        <div class="modal-header">
+            <h3 class="modal-title" id="exampleModalLongTitle">Information</h3>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="modal-body">
+            <h5>How to read the tables?</h5>
+            Each visa type shows 3 rows.
+            <br />
+            The first and the third row displays dates of the "From"  and "To" months respectively.
+            <br />
+            The second row displays the difference in days.
+            <br />
             <span style="color: #ff0000;">RED</span> denotes days regressed.
             <br />
             <span style="color: #009933;">GREEN</span> denotes days moved forward.
+            <br />
+            <br />
+            <h5>Disclaimer</h5>
+            Data on this website is taken from the monthly visa bulletins.
+            <br />
+            This website only displays the data and provides insights e.g. Number of days changed, charts, etc.
+            <br />
+            This is website and/or its author is not responsible for the information about the visa bulletin.
+            <br>
+            If you find some discrepancy between the visa bulletin dates and the dates displayed on this site. Please submit an issue here.          
         </div>
-        <br />
-        <br />
+        <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+        </div>
+        </div>
+    </div>
+    </div>
 
-        <h2 style="text-align: center;">Family-Sponsored: Final Action Dates</h2>
-        <div style="overflow-x: auto;">
-            <table class="table" id="table1" style="margin-left: auto; margin-right: auto; width: 80%;"></table>
-        </div>
-        <br />
-        <br />
-        <h2 style="text-align: center;">Family-Sponsored: Filing Dates</h2>
-        <div style="overflow-x: auto;">
-            <table class="table" id="table2" style="margin-left: auto; margin-right: auto; width: 80%;"></table>
-        </div>
-        <br />
-        <br />
-        <h2 style="text-align: center;">Employment-Based: Final Action Dates</h2>
-        <div style="overflow-x: auto;">
-            <table class="table" id="table3" style="margin-left: auto; margin-right: auto; width: 80%;"></table>
-        </div>
-        <br />
-        <br />
-        <h2 style="text-align: center;">Employment-Based: Filing Dates</h2>
-        <div style="overflow-x: auto;">
-            <table class="table" id="table4" style="margin-left: auto; margin-right: auto; width: 80%;"></table>
-        </div>
-        <br />
-        <br />
-    </body>
-    <script src="js/script.js"></script>
+</body>
+<script src="js/script.js"></script>
 </html>
