--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
             function gtag() {dataLayer.push(arguments);}
             gtag("js", new Date());
             gtag("config", "UA-58917162-3");
-	</script>
+    </script>
+    
+    <!-- Ads -->
+    <script data-ad-client="ca-pub-1523023712223869" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width" />
 	<meta name="description" content="Interactive way to find the number of days by which the Final Action and Filing Dates have regressed or moved forward." />
