--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     <script data-ad-client="ca-pub-1523023712223869" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name = "keywords" content = "uscis, visa bulletin, employment based, family sponsored" />
 	<meta name="description" content="Interactive way to find the number of days by which the Final Action and Filing Dates have regressed or moved forward." />
 
-	<title>Visa Bulletin</title>
+	<title>Interactive Visa Bulletin</title>
 
 	<link href="css/bootstrap.4.5.0.min.css" rel="stylesheet" crossorigin="anonymous" />
 	<link href="css/bootstrap-datepicker.1.19.0.min.css" rel="stylesheet" type="text/css" />
