Added data until Jan 2010. Updated explanation

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <meta name = "keywords" content = "uscis, visa bulletin, employment based, family sponsored" />
-	<meta name="description" content="Interactive way to find the number of days by which the Final Action and Filing Dates have regressed or moved forward." />
+	<meta name="description" content="Interactive way to find the number of days by which the “Final Action Dates” and “Dates for Filing Applications”<br>for Family-Sponsored and Employment-Based adjustment of status have regressed or moved forward betwen two selected months." />
 
 	<title>Interactive Visa Bulletin</title>
 
@@ -42,11 +42,13 @@
     <br/>
     <!-- <h1 style="text-align:center;">Visa Bulletin - Trends</h1> -->
     <div style="width:80%;margin:0 auto;text-align:center;">
-        <span style="color:gray;">Interactive way to find the number of days by which the Final Action and Filing Dates have regressed or moved forward.</span>
+        <span style="color:gray;">
+            Interactive way to find the number of days by which the “Final Action Dates” and “Dates for Filing Applications”<br>for Family-Sponsored and Employment-Based adjustment of status have regressed or moved forward betwen two selected months.
+        </span>
     </div>
     <br />
     <br />
-    <p style="text-align: center;">Just select the months you want to compare</p>
+    <p style="text-align: center;">To compare select two months between January 2010 and September 2020 and scrolldown</p>
     <table class="table" style="margin-left: auto; margin-right: auto; width: 60%;">
         <tr>
             <th style="text-align: left;">From</th>
@@ -100,7 +102,7 @@
     </div>
     <br />
     <br />
-    <h2 id="table2head" style="text-align: center;">Family-Sponsored: Filing Dates</h2>
+    <h2 id="table2head" style="text-align: center;">Family-Sponsored: Dates for Filing Applications</h2>
     <div style="overflow-x: auto;">
         <table class="table" id="table2" style="margin-left: auto; margin-right: auto; width: 80%;"></table>
     </div>
@@ -112,7 +114,7 @@
     </div>
     <br />
     <br />
-    <h2 id="table4head" style="text-align: center;">Employment-Based: Filing Dates</h2>
+    <h2 id="table4head" style="text-align: center;">Employment-Based: Dates for Filing Applications</h2>
     <div style="overflow-x: auto;">
         <table class="table" id="table4" style="margin-left: auto; margin-right: auto; width: 80%;"></table>
     </div>
