--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </script>
     
     <!-- Ads -->
-    <script data-ad-client="ca-pub-1523023712223869" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- <script data-ad-client="ca-pub-1523023712223869" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
 
 	<meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
