--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <meta name = "keywords" content = "uscis, visa bulletin, employment based, family sponsored" />
-	<meta name="description" content="Interactive way to find the number of days by which the “Final Action Dates” and “Dates for Filing Applications”<br>for Family-Sponsored and Employment-Based adjustment of status have regressed or moved forward betwen two selected months." />
+	<meta name="description" content="Interactive way to find the number of days by which the “Final Action Dates” and “Dates for Filing Applications”<br>for Family-Sponsored and Employment-Based adjustment of status have regressed or moved forward between two selected months." />
 
 	<title>Interactive Visa Bulletin</title>
 
