Use daterange.js

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 	<link href="css/bootstrap-datepicker.1.19.0.min.css" rel="stylesheet" type="text/css" />
 	<link href="css/style.css" rel="stylesheet" type="text/css" />
 
+    <script src="js/daterange.js"></script>
 	<script src="js/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
 	<script src="js/popper.1.16.0.min.js" crossorigin="anonymous"></script>
 	<script src="js/bootstrap.4.5.0.min.js" crossorigin="anonymous"></script>
@@ -48,7 +49,7 @@
     </div>
     <br />
     <br />
-    <p style="text-align: center;">To compare select two months between January 2015 and February 2021 and scrolldown</p>
+    <p style="text-align: center;">To compare select two months between <span id=startdate></span> and <span id=enddate></span> and scrolldown</p>
     <table class="table" style="margin-left: auto; margin-right: auto; width: 60%;">
         <tr>
             <th style="text-align: left;">From</th>
