--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
     <br />
     <br />
-    <p style="text-align: center;">To compare select two months between <span id=startdate></span> and <span id=enddate></span> and scrolldown</p>
+    <p style="text-align: center;">To compare select two months between <span id=txtstartdate></span> and <span id=txtenddate></span> scrolldown</p>
     <table class="table" style="margin-left: auto; margin-right: auto; width: 60%;">
         <tr>
             <th style="text-align: left;">From</th>
